<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_of_choice"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp">
    <TextView
        android:id="@+id/choice_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dialog_message"
        android:textColor="@android:color/black" />

    <RelativeLayout
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choice_message">

        <CheckBox
            android:id="@+id/check_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water" />

        <CheckBox
            android:id="@+id/check_electric_power"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electric_power"
            android:layout_below="@id/check_water"/>

        <CheckBox
            android:id="@+id/check_gas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gas"
            android:layout_below="@id/check_electric_power"/>
        <CheckBox
            android:id="@+id/check_cold_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cold_water"
            android:layout_below="@id/check_gas"/>
        <CheckBox
            android:id="@+id/check_hot_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hot_water"
            android:layout_below="@id/check_cold_water"/>
        <CheckBox
            android:id="@+id/check_house_heating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/house_heating"
            android:layout_below="@id/check_hot_water"/>
        <CheckBox
            android:id="@+id/check_internet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet"
            android:layout_below="@id/check_house_heating"/>
        <CheckBox
            android:id="@+id/check_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/services"
            android:layout_below="@id/check_internet"/>
        <CheckBox
            android:id="@+id/check_parking_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parking_place"
            android:layout_below="@id/check_services"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button_group"
        android:layout_below="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:gravity="top"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textSize="16dp"
            android:text="@string/ok"
            android:textColor="@color/item_text"
            android:background="@drawable/button_dialog"
            />
        <TextView
            android:id="@+id/button_cancel"
            android:layout_toLeftOf="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:gravity="top"
            android:layout_marginRight="8dp"
            android:padding="8dp"
            android:textSize="16dp"
            android:text="@string/cancel"
            android:textColor="@color/item_text"
            android:background="@drawable/button_dialog"
            />
    </RelativeLayout>
</RelativeLayout>

