<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:weightSum="4"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:tint="@color/text_color"
                android:src="@mipmap/ic_services" />

            <TextView
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/current" />

            <TextView
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/previous" />

            <TextView
                android:id="@+id/difference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/difference" />

            <TextView
                android:id="@+id/to_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/to_pay" />
        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>